# zola

./: Cargo.toml  LICENSE  README.md  settings.toml
src/: cli.rs  config.rs  main.rs  version_fetcher.rs
