[package]
name = "zola"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.10"
serde_json = "1.0.99"



[dev-dependencies]
httpmock = "0.6.0"
mockito = "1.1.0"

